# daemon_monitoring_project

./: .env  .gitignore  CMakeLists.txt  Dockerfile.client  Dockerfile.storage  Makefile  README.md  docker-compose.yml  docker.mk
client/: Dockerfile
client/config/: config-docker.json  config.json  init.json
client/include/: client-config.hpp  client.hpp  cmd-ui.hpp  commands.hpp  common-types.hpp  file-readers.hpp  ui.hpp
client/metrics/server-a/: 1.json
client/src/: client-config.cpp  client.cpp  cmd-ui.cpp  commands.cpp  file-readers.cpp  main.cpp
daemon/: Dockerfile
daemon/config/: config-server-a.json  config-server-b.json  config.json
daemon/include/: collector-linux.hpp  collector-win.hpp  collector.hpp  daemon.hpp  models.hpp
daemon/metrics/server-a/: 1.json
daemon/src/: collector-linux.cpp  collector-win.cpp  collector.cpp  daemon.cpp  main.cpp
storage/config/: config.json
storage/include/: models.hpp  shared-storage.hpp  single-daemon-storage.hpp
storage/metrics-client/server-a/: 1.json
storage/metrics/server-a/: metric.json
storage/metrics/server-b/: metric.json
storage/metrics/server-c/: metric.json
storage/src/: main.cpp  shared-storage.cpp  single-daemon-storage.cpp
